--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -57,7 +57,7 @@ arexwakeupperiod: "30"
 defaultttl: "604800 1209600"
 
 #statecallout: "FINISHED timeout=30,onfailure=pass"
-arexmaxtransfertries=10
+arexmaxtransfertries: 10
 
 unixgroup_dir_ops: "/etc/grid-security/opspool"
 unixgroup_dir_fgi: "/etc/grid-security/fgipool"
