--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -86,9 +86,9 @@ arc_frontend_queue_grid: |
  [queue:grid]
  comment=Grid queue
 
- benchmark="SPECFP2000 {{arc_frontend_sfp}}"
- benchmark="SPECINT2000  {{arc_frontend_si00}}"
- benchmark="HEPSPEC2006 {{arc_frontend_hs06}}"
+ benchmark=SPECFP2000 {{arc_frontend_sfp}}
+ benchmark=SPECINT2000  {{arc_frontend_si00}}
+ benchmark=HEPSPEC2006 {{arc_frontend_hs06}}
 
 arc5_packages:
  - nordugrid-arc-arex-5.4.4-2.el7.x86_64
