--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -54,7 +54,7 @@
 - name: Create Cache dir 
   file: path={{ arc_frontend_cachedir }} state=directory owner=root mode=0755
 
-- name: Create UnixGroup for OPS dir 
+- name: Create ops pool directory for account mapping
   file: path={{ unixgroup_dir_ops }} state=directory owner=root mode=0755
   when: init_griduser_accts|bool
 
@@ -63,15 +63,23 @@
   with_sequence: start=0 end={{ ops_acct_nr }} format={{group_name_ops}}%03d
   when: init_griduser_accts|bool
 
+- name: Create fgi pool directory for account mapping
+  file: path={{ unixgroup_dir_fgi }} state=directory owner=root mode=0755
+  when: init_griduser_accts|bool
+
 - name: Populate fgi pool file
   lineinfile: dest="{{ unixgroup_dir_fgi }}/pool" line={{ item }} create=yes state=present
   with_sequence: start=0 end={{ fgi_acct_nr }} format={{group_name_fgi}}%03d
   when: init_griduser_accts|bool
 
-- name: Create UnixGroup for FGI dir 
-  file: path={{ unixgroup_dir_fgi }} state=directory owner=root mode=0755
+- name: Create arctest pool directory for account mapping
+  file: path={{unixgroup_dir_arctest}} state=directory owner=root mode=0755
   when: init_griduser_accts|bool
 
+- name: Populate arctest pool file
+  lineinfile: dest="{{unixgroup_dir_arctest}}/pool" line={{ item }} create=yes state=present
+  with_sequence: start=1 end=3 format=arctest%03d
+  when: init_griduser_accts|bool
 
 
 
@@ -90,6 +98,11 @@
   delegate_to: install
   when: init_griduser_accts|bool
 
+- name: Create arctest group
+  group: name=arctest state=present
+  delegate_to: install
+  when: init_griduser_accts|bool
+
 # Ops users do not need write access for home
 - name: Create OPS home dir 
   file: path="{{arc_frontend_griddir}}/{{group_name_ops}}" state=directory owner=root mode=0755
@@ -98,6 +111,11 @@
 # Fgi users do not need write access for home
 - name: Create FGI home dir 
   file: path="{{arc_frontend_griddir}}/{{group_name_fgi}}" state=directory owner=root mode=0755
+  when: init_griduser_accts|bool
+
+# No homedir write access for arctest user because others don't have either
+- name: Create arctest home dir
+  file: path="{{arc_frontend_griddir}}/arctest" state=directory owner=root mode=0755
   when: init_griduser_accts|bool
 
 - name: Create generic gridnull user
@@ -116,15 +134,21 @@
   delegate_to: install
   when: init_griduser_accts|bool
 
-- name: Create Grid users for OPS
+- name: Create ops users
   user: name={{item}} state=present home="{{arc_frontend_griddir}}/{{group_name_ops}}" groups={{group_name_ops}} createhome=no
   with_sequence: start=0 end={{ops_acct_nr}} format={{group_name_ops}}%03d
   delegate_to: install
   when: init_griduser_accts|bool
 
-- name: Create Grid users for FGI
+- name: Create fgi users
   user: name={{item}} state=present home="{{arc_frontend_griddir}}/{{group_name_fgi}}" groups={{group_name_fgi}} createhome=no
   with_sequence: start=0 end={{fgi_acct_nr}} format={{group_name_fgi}}%03d
+  delegate_to: install
+  when: init_griduser_accts|bool
+
+- name: Create arctest users
+  user: name={{item}} state=present home="{{arc_frontend_griddir}}/arctest" groups=arctest createhome=no
+  with_sequence: start=1 end=3 format=arctest%03d
   delegate_to: install
   when: init_griduser_accts|bool
 
@@ -133,31 +157,48 @@
   delegate_to: install
   when: arc_frontend_nis|bool
 
-- name: Create Slurm user account for OPS 1/2
+- name: Create Slurm user account for ops if add_slurm_accts=true and init_griduser_accts=true 1/2
   command: /usr/bin/sacctmgr -i add account {{group_name_ops}}
   delegate_to: install
   when: add_slurm_accts|bool and init_griduser_accts|bool
   ignore_errors: yes
 
-- name: Create Slurm user account for OPS 2/2
+- name: Create Slurm user account for ops if add_slurm_accts=true and init_griduser_accts=true 2/2
   command: /usr/bin/sacctmgr -i add user name={{ item }} account={{group_name_ops}}
   with_sequence: start=0 end={{ops_acct_nr}} format={{group_name_ops}}%03d
   delegate_to: install
   when: add_slurm_accts|bool and init_griduser_accts|bool
   ignore_errors: yes
 
-- name: Create Slurm user account for FGI 1/2
+- name: Create Slurm user account for fgi if add_slurm_accts=true and init_griduser_accts=true 1/2
   command: /usr/bin/sacctmgr -i add account {{group_name_fgi}}
   delegate_to: install
   when: add_slurm_accts|bool and init_griduser_accts|bool
   ignore_errors: yes
 
-- name: Create Slurm user account for FGI 2/2
+- name: Create Slurm user account for fgi if add_slurm_accts=true and init_griduser_accts=true 2/2
   command: /usr/bin/sacctmgr -i add user name={{item}} account={{group_name_fgi}}
   with_sequence: start=0 end={{fgi_acct_nr}} format={{group_name_fgi}}%03d
   delegate_to: install
   when: add_slurm_accts|bool and init_griduser_accts|bool
   ignore_errors: yes
+
+- name: Create Slurm user account for arctest if add_slurm_accts=true and init_griduser_accts=true 1/2
+  command: /usr/bin/sacctmgr -i add account arctest
+  delegate_to: install
+  when: add_slurm_accts|bool and init_griduser_accts|bool
+  ignore_errors: yes
+
+- name: Create Slurm user account for arctest if add_slurm_accts=true and init_griduser_accts=true 2/2
+  command: /usr/bin/sacctmgr -i add user name={{item}} account=arctest
+  with_sequence: start=1 end=2 format=arctest%03d
+  delegate_to: install
+  when: add_slurm_accts|bool and init_griduser_accts|bool
+  ignore_errors: yes
+
+
+
+
 
 # Slurm Fairshare. This sould go to Slurm role in the future. 
 
