Add arc-infosys-ldap to default services

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,6 +19,7 @@ arc_frontend_packages:
 arc_frontend_services:
  - arc-arex
  - arc-gridftpd
+ - arc-infosys-ldap
 
 arc_frontend_disabled_services:
 
