--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -94,6 +94,12 @@
   file: path="{{arc_frontend_griddir}}/{{group_name_fgi}}" state=directory owner=root mode=0755
   when: init_griduser_accts|bool
 
+- name: Copy ops users .bashrc file to homedir to unset SLURM_EXPORT_ENV
+  copy: src=.bashrc dest={{arc_frontend_griddir}}/{{group_name_ops}} owner=root mode=0644
+
+- name: Copy fgi users .bashrc file to homedir to unset SLURM_EXPORT_ENV
+  copy: src=.bashrc dest={{arc_frontend_griddir}}/{{group_name_fgi}} owner=root mode=0644
+
 - name: Create generic grid user
   user: name=grid state=present home="{{arc_frontend_griddir}}/grid"
   delegate_to: install
